Add OCR result caching (default off), and toggles for it
There are commandline and config settings to enable or disable
this caching.
The cache is not used by default because there is no mechanic yet that
clears the cache when something changes in the ImageParser,
which can easily lead to weird and/or wrong results
Enabling this leads to 10x faster parsing, since the OCR part is the most time-intensive

--- a/config.json.example
+++ b/config.json.example
@@ -2,5 +2,7 @@
   "loglevel": "warning",
   "tesseractPath": "",
   "cardTraderToken": "",
-  "threadCount": 0
+  "threadCount": 0,
+  "skipCachingOcr": false,
+  "useCachedOcr": false
 }
