Make output in 'output' folder instead of 'generated' subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@ __pycache__/
 
 /downloads/**
 /logs/**
-/output/generated/
-/output/handmade/
-/output/oldVersions/
+/oldVersions/
+/output/
 /website/
 
 /config.json
